# Project4-InvertedFileIndexing

./: .gitignore  README.md
Source/: BuildVocabularyTree.cpp  Build_Codebook.cpp  CMakeLists.txt  ComputeHistograms.cpp  FindP1.cmake  IFI-test.cpp  LSH-test.cpp  OnlineSearch.cpp  TestSearch.cpp  TfIdfWeighting.cpp  VisualizeResults.cpp
Source/InvertedFileIndex/: CMakeLists.txt  InvertedFileIndex.cpp  InvertedFileIndex.hpp  test.cpp
Source/LSH/: CMakeLists.txt  LSH.cpp  LSH.hpp  RandomProjectionAlgorithm.hpp
Test/: CMakeLists.txt  FindP2.cmake  FindP4.cmake
Test Files/: all_images  filelist  wang_bow256_histograms  wang_bow625_histograms
Test/LSH/: CMakeLists.txt  LSH-test.cpp
